--- a/multiple.html
+++ b/multiple.html
@@ -16,16 +16,16 @@
 			};
 
 			function loop() {
-                requestAnimationFrame(loop);
+                		requestAnimationFrame(loop);
 				world1.doOneCycle();
 				world2.doOneCycle();
 			}
 		</script>
 	</head>
 	<body>
-		<p>first world:</p>
+		<p>1st World:</p>
 		<canvas id="world1" tabindex="1" width="600" height="400"></canvas>
-		<p>second world:</p>
+		<p>2nd World:</p>
 		<canvas id="world2" tabindex="2" width="400" height="600"></canvas>
 	</body>
 </html>
