--- a/sample.html
+++ b/sample.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>touch me!</title>
+        <title>Touch Me!</title>
         <script type="text/javascript" src="morphic.js"></script>
         <script type="text/javascript">
             var worldCanvas, sensor;
